[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Phoneme.gd" type="Script" id=1]
[ext_resource path="res://Resources/PhonemeFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/glow2.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 56, 56 )

[node name="Phoneme" type="Node2D" groups=["phoneme"]]
script = ExtResource( 1 )

[node name="Glow" type="TextureRect" parent="."]
margin_left = -128.0
margin_top = -128.0
margin_right = 72.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( 130, 130 )
texture = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pitch_scale = 1.14

[node name="Button" type="Button" parent="."]
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
flat = true

[node name="Label" type="Label" parent="Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.5
margin_top = -29.5
margin_right = 48.5
margin_bottom = 29.5
custom_fonts/font = ExtResource( 2 )
text = "test"
align = 1
valign = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
